test-cases/in_before_out.exp
Error detected during generating low level code in in_before_out
test-cases/in_before_out.wybe:2:13: Uninitialised variable 'result'
