test-cases/in_before_out.wybe
public def in_before_out(?result:int) {
       incr(!result)
}
